import { jest } from '@jest/globals'
import { CID } from 'multiformats/cid'
import * as dagCBOR from '@ipld/dag-cbor'
import type { DID } from 'dids'
import {
  CeramicApi,
  CommitData,
  CommitType,
  Context,
  IpfsApi,
  SignedCommitContainer,
} from '@ceramicnetwork/common'
import { TileDocumentHandler } from '../tile-document-handler.js'
import { TileDocument } from '@ceramicnetwork/stream-tile'
import cloneDeep from 'lodash.clonedeep'
import {
  DidTestUtils,
  FAKE_CID_1,
  FAKE_CID_2,
  FAKE_CID_3,
  FAKE_CID_4,
} from '@ceramicnetwork/did-test-utils'
import { CommonTestUtils as TestUtils } from '@ceramicnetwork/common-test-utils'

const DID_ID = 'did:key:zQ3shwsCgFanBax6UiaLu1oGvM7vhuqoW88VBUiUTCeHbTeTV'

const COMMITS = {
  genesis: {
    header: {
      tags: ['3id'],
      controllers: [DID_ID],
    },
    data: { publicKeys: { test: '0xabc' } },
  },
  genesisGenerated: {
    jws: {
      payload: 'bbbb',
      signatures: [
        {
          protected:
            'eyJraWQiOiJkaWQ6a2V5OnpRM3Nod3NDZ0ZhbkJheDZVaWFMdTFvR3ZNN3ZodXFvVzg4VkJVaVVUQ2VIYlRlVFYiLCJhbGciOiJFUzI1NksifQ',
          signature: 'cccc',
        },
      ],
      link: CID.parse('bafyreig7dosektvux6a55mphri6piy3g5k4otxinanfevjeehix6rqfeym'),
    },
    linkedBlock: {
      data: {
        publicKeys: {
          test: '0xabc',
        },
      },
      header: {
        controllers: [DID_ID],
        tags: ['3id'],
      },
    },
  },
  r1: {
    desiredContent: { publicKeys: { test: '0xabc' }, other: 'data' },
    commit: {
      jws: {
        payload: 'bbbb',
        signatures: [
          {
            protected:
              'eyJraWQiOiJkaWQ6a2V5OnpRM3Nod3NDZ0ZhbkJheDZVaWFMdTFvR3ZNN3ZodXFvVzg4VkJVaVVUQ2VIYlRlVFYiLCJhbGciOiJFUzI1NksifQ',
            signature: 'cccc',
          },
        ],
        link: 'bafyreib2rxk3rybk3aobmv5cjuql3bm2twh4jo5uxgf5kpqcsgz7soitae',
      },
      payload: {
        id: 'bafybeig6xv5nwphfmvcnektpnojts33jqcuam7bmye2pb54adnrtccjlsu',
        data: [
          {
            op: 'add',
            path: '/other',
            value: 'data',
          },
        ],
        prev: 'bafybeig6xv5nwphfmvcnektpnojts33jqcuam7bmye2pb54adnrtccjlsu',
        header: {},
      },
    },
  },
  r2: { commit: { proof: FAKE_CID_4, id: FAKE_CID_1, prev: FAKE_CID_2 } },
  proof: {
    chainId: 'fakechain:123',
  },
}

let did: DID
let tileDocumentHandler: TileDocumentHandler
let context: Context

beforeEach(async () => {
  jest.resetAllMocks()

  const recs: Record<string, any> = {}
  const ipfs = {
    dag: {
      put(rec: any, cid?: CID): any {
        if (cid) {
          recs[cid.toString()] = { value: rec }
          return cid
        }
        // stringify as a way of doing deep copy
        const clone = cloneDeep(rec)
        const c = DidTestUtils.hash(JSON.stringify(clone))
        recs[c.toString()] = { value: clone }
        return c
      },
      get(cid: any): any {
        return recs[cid.toString()]
      },
    },
  } as IpfsApi

  did = DidTestUtils.generateDID(DID_ID)
  did.createJWS = jest.fn(async () => {
    // fake jws
    return {
      payload: 'bbbb',
      signatures: [
        {
          protected:
            'eyJraWQiOiJkaWQ6a2V5OnpRM3Nod3NDZ0ZhbkJheDZVaWFMdTFvR3ZNN3ZodXFvVzg4VkJVaVVUQ2VIYlRlVFYiLCJhbGciOiJFUzI1NksifQ',
          signature: 'cccc',
        },
      ],
    }
  })
  const api = DidTestUtils.apiForDid(did)

  context = {
    did,
    ipfs,
    anchorService: null,
    api: api as unknown as CeramicApi,
  }

  tileDocumentHandler = new TileDocumentHandler()
})

it('is constructed correctly', async () => {
  expect(tileDocumentHandler.name).toEqual('tile')
})

it('makes genesis commit correctly', async () => {
  const commit = (await TileDocument.makeGenesis(context.api, COMMITS.genesis.data, {
    ...COMMITS.genesis.header,
  })) as SignedCommitContainer
  const { jws, linkedBlock } = commit

  const payload = dagCBOR.decode(linkedBlock)
  const generated = {
    jws: DidTestUtils.serialize(jws),
    linkedBlock: DidTestUtils.serialize(payload),
  }

  // Add the 'unique' header field to the data used to generate the expected genesis commit
  const genesis = cloneDeep(COMMITS.genesis)
  genesis.header['unique'] = generated.linkedBlock.header.unique

  const expected = await did.createDagJWS(genesis)
  expect(expected).toBeDefined()

  const { jws: eJws, linkedBlock: eLinkedBlock } = expected
  const ePayload = dagCBOR.decode(eLinkedBlock)
  const signed = {
    jws: DidTestUtils.serialize(eJws),
    linkedBlock: DidTestUtils.serialize(ePayload),
  }

  expect(generated).toEqual(DidTestUtils.serialize(signed))
})

it('applies genesis commit correctly', async () => {
  DidTestUtils.disableJwsVerification(context.did)
  const commit = (await TileDocument.makeGenesis(context.api, COMMITS.genesis.data, {
    controllers: [did.id],
    tags: ['3id'],
  })) as SignedCommitContainer
  await context.ipfs.dag.put(commit, FAKE_CID_1)

  const payload = dagCBOR.decode(commit.linkedBlock)
  await context.ipfs.dag.put(payload, commit.jws.link)

  const signedCommitData = {
    cid: FAKE_CID_1,
    type: CommitType.GENESIS,
    commit: payload,
    envelope: commit.jws,
  }
  const streamState = await tileDocumentHandler.applyCommit(signedCommitData, context)
  delete streamState.metadata.unique
  expect(streamState).toMatchSnapshot()
})

it('makes signed commit correctly', async () => {
  DidTestUtils.disableJwsVerification(context.did)
  await context.ipfs.dag.put(COMMITS.genesisGenerated.jws, FAKE_CID_1)
  await context.ipfs.dag.put(
    COMMITS.genesisGenerated.linkedBlock,
    COMMITS.genesisGenerated.jws.link
  )

  const genesisCommitData = {
    cid: FAKE_CID_1,
    type: CommitType.GENESIS,
    commit: COMMITS.genesisGenerated.linkedBlock,
    envelope: COMMITS.genesisGenerated.jws,
  }
  const state = await tileDocumentHandler.applyCommit(genesisCommitData, context)
  const state$ = TestUtils.runningState(state)
  const doc = new TileDocument(state$, context)

  await expect(doc.makeCommit({} as CeramicApi, COMMITS.r1.desiredContent)).rejects.toThrow(
    /No DID/
  )

  const commit = (await doc.makeCommit(
    context.api,
    COMMITS.r1.desiredContent
  )) as SignedCommitContainer
  const { jws: rJws, linkedBlock: rLinkedBlock } = commit
  const rPayload = dagCBOR.decode(rLinkedBlock)
  expect({ jws: DidTestUtils.serialize(rJws), payload: DidTestUtils.serialize(rPayload) }).toEqual(
    COMMITS.r1.commit
  )
})

it('applies signed commit correctly', async () => {
  DidTestUtils.disableJwsVerification(context.did)
  const genesisCommit = (await TileDocument.makeGenesis(context.api, COMMITS.genesis.data, {
    controllers: [did.id],
    tags: ['3id'],
  })) as SignedCommitContainer
  await context.ipfs.dag.put(genesisCommit, FAKE_CID_1)

  const payload = dagCBOR.decode(genesisCommit.linkedBlock)
  await context.ipfs.dag.put(payload, genesisCommit.jws.link)

  // apply genesis
  const genesisCommitData = {
    cid: FAKE_CID_1,
    type: CommitType.GENESIS,
    commit: payload,
    envelope: genesisCommit.jws,
  }
  let state = await tileDocumentHandler.applyCommit(genesisCommitData, context)

  const state$ = TestUtils.runningState(state)
  const doc = new TileDocument(state$, context)
  const signedCommit = (await doc.makeCommit(
    context.api,
    COMMITS.r1.desiredContent
  )) as SignedCommitContainer

  await context.ipfs.dag.put(signedCommit, FAKE_CID_2)

  const sPayload = dagCBOR.decode(signedCommit.linkedBlock)
  await context.ipfs.dag.put(sPayload, signedCommit.jws.link)

  // apply signed
  const signedCommitData = {
    cid: FAKE_CID_2,
    type: CommitType.SIGNED,
    commit: sPayload,
    envelope: signedCommit.jws,
  }
  state = await tileDocumentHandler.applyCommit(signedCommitData, context, state)
  delete state.metadata.unique
  delete state.next.metadata.unique
  expect(state).toMatchSnapshot()
})

it('throws error if commit signed by DID not matching controller', async () => {
  const genesisCommit = (await TileDocument.makeGenesis(context.api, COMMITS.genesis.data, {
    controllers: ['did:3:fake'],
    tags: ['3id'],
  })) as SignedCommitContainer
  await context.ipfs.dag.put(genesisCommit, FAKE_CID_1)

  const payload = dagCBOR.decode(genesisCommit.linkedBlock)
  await context.ipfs.dag.put(payload, genesisCommit.jws.link)

  const genesisCommitData = {
    cid: FAKE_CID_1,
    type: CommitType.GENESIS,
    commit: payload,
    envelope: genesisCommit.jws,
  }

  context.did.verifyJWS = jest.fn(async () => {
    return Promise.reject('/invalid_jws: not a valid verificationMethod for issuer/')
  })

  await expect(tileDocumentHandler.applyCommit(genesisCommitData, context)).rejects.toThrow(
    /invalid_jws: not a valid verificationMethod for issuer/
  )
})

it('applies anchor commit correctly', async () => {
  DidTestUtils.disableJwsVerification(context.did)
  const genesisCommit = (await TileDocument.makeGenesis(context.api, COMMITS.genesis.data, {
    controllers: [did.id],
    tags: ['3id'],
  })) as SignedCommitContainer
  await context.ipfs.dag.put(genesisCommit, FAKE_CID_1)

  const payload = dagCBOR.decode(genesisCommit.linkedBlock)
  await context.ipfs.dag.put(payload, genesisCommit.jws.link)

  // apply genesis
  const genesisCommitData = {
    cid: FAKE_CID_1,
    type: CommitType.GENESIS,
    commit: payload,
    envelope: genesisCommit.jws,
  }
  let state = await tileDocumentHandler.applyCommit(genesisCommitData, context)

  const state$ = TestUtils.runningState(state)
  const doc = new TileDocument(state$, context)
  const signedCommit = (await doc.makeCommit(
    context.api,
    COMMITS.r1.desiredContent
  )) as SignedCommitContainer

  await context.ipfs.dag.put(signedCommit, FAKE_CID_2)

  const sPayload = dagCBOR.decode(signedCommit.linkedBlock)
  await context.ipfs.dag.put(sPayload, signedCommit.jws.link)

  // apply signed
  const signedCommitData = {
    cid: FAKE_CID_2,
    type: CommitType.SIGNED,
    commit: sPayload,
    envelope: signedCommit.jws,
  }
  state = await tileDocumentHandler.applyCommit(signedCommitData, context, state)

  await context.ipfs.dag.put(COMMITS.proof, FAKE_CID_4)
  // apply anchor
  const anchorCommitData = {
    cid: FAKE_CID_3,
    type: CommitType.ANCHOR,
    commit: COMMITS.r2.commit,
    proof: COMMITS.proof,
    timestamp: 1615799679,
  } as CommitData
  state = await tileDocumentHandler.applyCommit(anchorCommitData, context, state)
  delete state.metadata.unique
  expect(state).toMatchSnapshot()
})
