// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TileDocument with 3ID applies anchor commit correctly 1`] = `
{
  "anchorProof": {
    "chainId": "fakechain:123",
  },
  "anchorStatus": 3,
  "content": {
    "other": "data",
    "publicKeys": {
      "test": "0xabc",
    },
  },
  "log": [
    {
      "cid": {
        "/": "bafybeig6xv5nwphfmvcnektpnojts33jqcuam7bmye2pb54adnrtccjlsu",
      },
      "timestamp": 1615799679,
      "type": 0,
    },
    {
      "cid": {
        "/": "bafybeig6xv5nwphfmvcnektpnojts44jqcuam7bmye2pb54adnrtccjlsu",
      },
      "timestamp": 1615799679,
      "type": 1,
    },
    {
      "cid": {
        "/": "bafybeig6xv5nwphfmvcnektpnojts55jqcuam7bmye2pb54adnrtccjlsu",
      },
      "timestamp": 1615799679,
      "type": 2,
    },
  ],
  "metadata": {
    "controllers": [
      "did:key:zQ3shwsCgFanBax6UiaLu1oGvM7vhuqoW88VBUiUTCeHbTeTV",
    ],
    "tags": [
      "3id",
    ],
  },
  "signature": 2,
  "type": 0,
}
`;

exports[`TileDocument with 3ID applies genesis commit correctly 1`] = `
{
  "anchorStatus": 0,
  "content": {
    "publicKeys": {
      "test": "0xabc",
    },
  },
  "log": [
    {
      "cid": {
        "/": "bafybeig6xv5nwphfmvcnektpnojts33jqcuam7bmye2pb54adnrtccjlsu",
      },
      "type": 0,
    },
  ],
  "metadata": {
    "controllers": [
      "did:key:zQ3shwsCgFanBax6UiaLu1oGvM7vhuqoW88VBUiUTCeHbTeTV",
    ],
    "tags": [
      "3id",
    ],
  },
  "signature": 2,
  "type": 0,
}
`;

exports[`TileDocument with 3ID applies signed commit correctly 1`] = `
{
  "anchorStatus": 0,
  "content": {
    "publicKeys": {
      "test": "0xabc",
    },
  },
  "log": [
    {
      "cid": {
        "/": "bafybeig6xv5nwphfmvcnektpnojts33jqcuam7bmye2pb54adnrtccjlsu",
      },
      "type": 0,
    },
    {
      "cid": {
        "/": "bafybeig6xv5nwphfmvcnektpnojts44jqcuam7bmye2pb54adnrtccjlsu",
      },
      "type": 1,
    },
  ],
  "metadata": {
    "controllers": [
      "did:key:zQ3shwsCgFanBax6UiaLu1oGvM7vhuqoW88VBUiUTCeHbTeTV",
    ],
    "tags": [
      "3id",
    ],
  },
  "next": {
    "content": {
      "other": "data",
      "publicKeys": {
        "test": "0xabc",
      },
    },
    "metadata": {
      "controllers": [
        "did:key:zQ3shwsCgFanBax6UiaLu1oGvM7vhuqoW88VBUiUTCeHbTeTV",
      ],
      "tags": [
        "3id",
      ],
    },
  },
  "signature": 2,
  "type": 0,
}
`;
